test/tests/nek_errors/invalid_settings/brick.par
[OCCA]
  backend = CPU

[GENERAL]
  stopAt = numSteps
  numSteps = 7
  dt = 5.0e-4
  polynomialOrder = 2
  checkpointControl = steps
  checkpointInterval = 2
  scalars = temperature

[MESH]
  file=../../common_inputs/brick.re2

[FLUID VELOCITY]
  solver = none

[FLUID PRESSURE]
  residualTol = 1.0e-5

[SCALAR TEMPERATURE]
  boundaryTypeMap = zeroNeumann, zeroNeumann, udfNeumann, zeroNeumann, zeroNeumann, zeroNeumann
